<resources>
    <string name="app_name">Fabflix Mobile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fabflix">Fabflix</string>
    <string name="action_mainpage_search">SEARCH</string>
    <string name="prompt_title">Movie Name</string>
    <string name="prompt_year">Year</string>
    <string name="prompt_director">Director</string>
    <string name="prompt_star">Star Name</string>
</resources>