<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/movieStar"
        android:layout_width="wrap_content"
        android:layout_height="?attr/minTouchTargetSize"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/prompt_star"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieDirector" />

    <EditText
        android:id="@+id/movieYear"
        android:layout_width="wrap_content"
        android:layout_height="?attr/minTouchTargetSize"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/prompt_year"
        android:inputType="number|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <EditText
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="?attr/minTouchTargetSize"
        android:ems="10"
        android:hint="@string/prompt_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="96dp" />

    <EditText
        android:id="@+id/movieDirector"
        android:layout_width="wrap_content"
        android:layout_height="?attr/minTouchTargetSize"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/prompt_director"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieYear" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/action_mainpage_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieStar" />
</androidx.constraintlayout.widget.ConstraintLayout>